--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
 
             <div class="flex flex-wrap justify-between gap-x-4 gap-y-8">
                 <div class="w-full md:w-[32%]">
-                    <div class="text-center md:text-left p-4 rounded-lg shadow-sm h-full">
+                    <div class="text-center md:text-left p-4 rounded-lg h-full">
                         <img src="assets/pre–primary-school.webp" alt="Pre-Primary" class="mb-3 mx-auto md:mx-0">
                         <h3 class="text-[#10538A] font-[gilroy-bold] text-[18px]">Pre – Primary School</h3>
                         <p class="font-[gilroy-medium] text-black text-[13px] mb-2">(Nursery to K.G. II)</p>
@@ -310,7 +310,7 @@
                 </div>
 
                 <div class="w-full md:w-[32%]">
-                    <div class="text-center md:text-left p-4 rounded-lg shadow-sm h-full">
+                    <div class="text-center md:text-left p-4 rounded-lg h-full">
                         <img src="assets/middle-school.webp" alt="Middle School" class="mb-3 mx-auto md:mx-0">
                         <h3 class="text-[#10538A] font-[gilroy-bold] text-[18px]">Middle School</h3>
                         <p class="font-[gilroy-medium] text-black text-[13px] mb-2">Grades 6 to 8</p>
@@ -322,7 +322,7 @@
                 </div>
 
                 <div class="w-full md:w-[32%]">
-                    <div class="text-center md:text-left p-4 rounded-lg shadow-sm h-full">
+                    <div class="text-center md:text-left p-4 rounded-lg h-full">
                         <img src="assets/secondary-school.webp" alt="Secondary School" class="mb-3 mx-auto md:mx-0">
                         <h3 class="text-[#10538A] font-[gilroy-bold] text-[18px]">Secondary School</h3>
                         <p class="font-[gilroy-medium] text-black text-[13px] mb-2">Grades 9 to 10</p>
