--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
             <div class="flex flex-wrap gap-y-8">
                 <div class="w-[50%] md:w-[25%] border border-0 border-dashed border-r-2">
                   <div class="lg:flex gap-x-3 ">
-                    <img src="assets/school.webp" alt="" class="lg:w-28 md:w-20 w-20 h-auto mx-auto">
+                    <img src="assets/school.webp" alt="" class="lg:w-28 md:w-20 w-20 h-auto mx-auto lg:m-0">
                     <p class="font-[cocogoose] text-[#131313] flex justify-center flex-col lg:text-start text-center">Large<br> Campus</p>
                   </div>
                 </div>
